修改首页链接样式

--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -29,7 +29,7 @@
 <body>
 <div class="header">
     <div class="content-wrap">
-        <span class="welcome"><a href="{% url 'gift_platform_site:home' %}">首页</a></span>
+        <span class="welcome" style="color: #B19B70"><a href="{% url 'gift_platform_site:home' %}">首页</a></span>
         <div class="button-wrap">
             <a href="{% url 'gift_platform_site:myaccount' %}">{{ request.user.username }}</a>
             <a class="acls" href="{% url 'gift_platform_site:sysinfo' %}">系统消息</a>
