--- a/templates/share/base_layout_usercenter.html
+++ b/templates/share/base_layout_usercenter.html
@@ -17,6 +17,7 @@
                    href="{% url 'gift_platform_site:sysinfo' %}">消息中心</a>
 
             </div>
+        {% if user.inprivatearea %}
             <div class="category">
                 <span class="category-header">私有域管理</span>
                 <a class="{% ifequal request.path '/usercenter/privatearea/suppliers' %}select{% endifequal %} nav-item"
@@ -24,6 +25,7 @@
                 <a class="{% ifequal request.path '/usercenter/privatearea/suppliers/new' %}select{% endifequal %} nav-item"
                    href="{% url 'gift_platform_site:new_private_suppliers' %}">创建供应商</a>
             </div>
+        {% endif %}
         </div>
         {% block content1 %}
 
