--- a/templates/products/categories_list.html
+++ b/templates/products/categories_list.html
@@ -14,7 +14,7 @@
         {% for i in category.category_set.count|to_range %}
             <div class="sub-category-wrap-new-line">
             {% for child_category in category.category_set.all|take:i %}
-                    <a class="sub-category" href=href="/product/categories/{{ category.id }}/{{ child_category.id }}/products">{{ child_category.name }}</a>
+                    <a class="sub-category" href="/product/categories/{{ category.id }}/{{ child_category.id }}/products">{{ child_category.name }}</a>
             {% endfor %}
             </div>
         {% endfor %}
