--- a/templates/search/supplier_search_result_list.html
+++ b/templates/search/supplier_search_result_list.html
@@ -36,9 +36,9 @@
                         {% if product.inprivatearea %}
                             <span class="private-tag"></span>
                         {% endif %}
-                        <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
+                        <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><img class="image-cover" src="{{ product.images.first.productimage.url }}" /></a>
                         <div class="desc-wrap">
-                            <div class="name">{{ product.name }}</div>
+                            <div class="name"><a href="{% url "gift_platform_site:product_details" product_id=product.id %}">{{ product.name }}</a></div>
                             <div class="price">￥{{ product.productItems.first.price }}</div>
                         </div>
                     </div>
