去除无用的按钮。

--- a/templates/search/supplier_search_result_list.html
+++ b/templates/search/supplier_search_result_list.html
@@ -11,7 +11,7 @@
         <div class="supplier-item-header">
             <div class="name">
                 <div>{{ supplier.suppliername }}</div>
-                <a class="subscribe-btn">订阅</a>
+                <!--<a class="subscribe-btn">订阅</a>-->
             </div>
             <div class="social-btns-wrap">
                 <div class="social-btn">
