添加logo到首页的导航。

--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -9,8 +9,7 @@
 <body>
 <div class="container">
     <div class="reg-login-wrap">
-        <img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}">
-
+        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}"></a>
     </div>
 </div>
 <hr class="hrline"/>
