--- a/templates/share/base_layout_reg.html
+++ b/templates/share/base_layout_reg.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div class="reg-login-wrap">
-        <img class="logo" src="{% static 'gift_platform_site/images/logo.png' %}">
+        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}"></a>
         <p class="infotolog">已有账号？去<a href="{% url 'gift_platform_site:login' %}">登录</a></p>
     </div>
 </div>
