--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -43,7 +43,7 @@
 </div>
 <div class="container">
     <div class="search-head-wrap">
-        <img class="logo" src="{% static "gift_platform_site/images/logo.png" %}">
+        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}"></a>
         <div class="search-wrap">
             <div class="search">
                 <div class="tab">
